tests/golden/openshift/openshift/openshift/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: openshift
    name: openshift
    rollout-operator.syn.tools/allow: ''
  name: openshift
