tests/golden/openshift/openshift/openshift/30_network_policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: allow-from-other-namespaces
    name: allow-from-other-namespaces
  name: allow-from-other-namespaces
  namespace: openshift
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - vshn-grafana
  policyTypes:
    - Ingress
